Production/app1/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: demo-frontend-prod-app1
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: demo
    app.kubernetes.io/part-of: demo
    app.openshift.io/runtime: dotnet
  name: demo-frontend
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: demo-frontend-prod-app1
      app.kubernetes.io/name: demo
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: demo-frontend-prod-app1
        app.kubernetes.io/managed-by: argocd
        app.kubernetes.io/name: demo
        app.kubernetes.io/part-of: demo
        app.openshift.io/runtime: dotnet
    spec:
      containers:
        - env:
            - name: IMAGE
              value: quay.io/thason/gitops-demo
            - name: TAG
              value: e28dc8ebfb4934cf1362f87285ebb7c2f1faf4cf
          image: 'quay.io/thason/gitops-demo:e28dc8ebfb4934cf1362f87285ebb7c2f1faf4cf'
          livenessProbe:
            httpGet:
              path: /health/liveliness
              port: http
          name: frontend
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: http
          volumeMounts: null
      volumes: null
